--- a/AngularApp/projects/diagnostic-data/src/lib/components/step-views/check-step-view/check.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/step-views/check-step-view/check.component.html
@@ -2,12 +2,15 @@
   <div class="status-icon">
       <status-icon [loading]="1" [status]="check.level | convertLevelToHealthStatus"></status-icon>
   </div>
-  <div class="check-title {{bold ? 'bold':''}}" [innerHtml]="check.title">
+  <div class="check-content">
+    <div class="check-title {{bold ? 'bold':''}}" [innerHtml]="check.title">
+      <a tabindex="0" (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a>
+    </div>
+    <span class="expand-icon" *ngIf="check.subChecks?.length>0; else elseBlock"> <a tabindex="0" (click)="toggleSubChecks()"> <i class="ms-Icon ms-Icon--{{expanded ? 'ChevronUpMed' : 'ChevronDownMed'}} "></i> </a></span>
+    <ng-template #elseBlock>
+      <span class="details-link" *ngIf="check.detailsMarkdown!=null"> <a tabindex="0" (click)="toggleDetails()">details</a></span>
+    </ng-template>
   </div>
-  <div class="expand-icon" *ngIf="check.subChecks?.length>0; else elseBlock"> <a tabindex="0" (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a></div>
-  <ng-template #elseBlock>
-    <div class="details-link" *ngIf="check.detailsMarkdown!=null"> <a tabindex="0" (click)="toggleDetails()"> details </a></div>
-  </ng-template>
   <div class="subchecks-container" *ngIf="expanded">
     <div class="sub-check" *ngFor="let subCheck of check.subChecks; let i = index">
       <check [check]="subCheck"></check> 
