--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -73,7 +73,7 @@
     <dynamic-data [isRiskAlertDetector]="isRiskAlertDetector" [isAnalysisView]="isAnalysisView" [diagnosticData]="data" [startTime]="startTime" [endTime]="endTime"
       [detectorEventProperties]="detectorEventProperties" [developmentMode]="developmentMode" [executionScript]="script"
       [detector]="detector" [xAxisPlotBands]="xAxisPlotBands" [zoomBehavior]="zoomBehavior"
-      (XAxisSelection)="onXAxisSelection($event)" [compilationPackage]="compilationPackage"></dynamic-data>
+      (XAxisSelection)="onXAxisSelection($event)" [compilationPackage]="compilationPackage" [hideShieldComponent]="hideShieldComponent"></dynamic-data>
   </div>
 </div>
 
