--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.html
@@ -1,6 +1,21 @@
 <div class="col-md col-ms col-lg" style="padding: 5px 25px;width: 100%;min-height: 70vh;display: inline-block;">
+  <fab-panel [isOpen]="isPanelOpen" (onDismiss)="closePanel()" [type]="panelType" [headerText]="panelHeaderText">
+    <div style="padding: 10px">
+      <solution-view-container *ngFor="let sol of panelSolutions" [solutionTitle]="sol.Title" [detector]="'solutionorchestrator'"
+        [isAnalysisView]="false" [isKeystoneDetector]="false" [showFeedbackQuestion]="false">
+      <markdown [data]="sol.DescriptionMarkdown"></markdown>
+      </solution-view-container>
+    </div>
+  </fab-panel>
   <div class="row" name="header">
     <fab-command-bar [attr.id]="'fab-command-bar-sol-orch'"  contentStyle="border-bottom:1px solid gray;font-weight:12px" contentClass="fab-command-bar-class" >
+      <items>
+        <fab-command-bar-item *ngIf="isDetectorView" key="custom1" text="custom text">
+          <render>
+            <ng-template let-item="item"><fab-breadcrumb [items]="breadcrumbItems" [styles]="breadCrumbStyle"></fab-breadcrumb></ng-template>
+          </render>
+        </fab-command-bar-item>
+      </items>
       <far-items>
         <fab-command-bar-item key="sendFeedback" text="Feedback" [iconProps]="{ iconName: 'Emoji2' }"
           (click)="sendFeedback()"></fab-command-bar-item>
@@ -12,119 +27,136 @@
       </far-items>
     </fab-command-bar>
   </div>
-  <div class="row" name="search-bar" style="margin: 20px auto;">
-    <div style="margin: auto 25%;">
-      <div class="row" style="font-size: 18px; font-weight: 700; padding: 12px;">Displaying Diagnostics based on ...</div>
-      <fab-search-box id="solOrchSearchBox" type="search" [placeholder]="'Briefly describe the issue'" [value]="searchTerm"
-        [ariaLabel]="inputAriaLabel" (onChange)="updateSearchTerm($event)" (onSearch)="onSearchEnter($event)" (onFocus)="onSearchBoxFocus()">
-      </fab-search-box>
+  <!--<div class="row" name="header1" *ngIf="isDetectorView">
+    <fab-breadcrumb [items]="breadcrumbItems"></fab-breadcrumb>
+  </div>-->
+  <div class="row" *ngIf="!isDetectorView">
+    <div class="row" name="search-bar" style="margin: 20px auto;">
+      <div style="margin: auto 25%;">
+        <div class="row" style="font-size: 18px; font-weight: 700; padding: 12px;">Displaying Diagnostics based on ...</div>
+        <fab-search-box id="solOrchSearchBox" type="search" [placeholder]="'Briefly describe the issue'" [value]="searchTermDisplayed"
+          [ariaLabel]="inputAriaLabel" (onChange)="updateSearchTerm($event)" (onSearch)="onSearchEnter($event)" (onFocus)="onSearchBoxFocus()" (onClear)="clearSearchTerm()">
+        </fab-search-box>
+      </div>
+    </div>
+    <div class="row" name="top-solution">
+      <h3 style="font-size: 16px;font-weight: 700;margin: 2px 10px;">We think we found you a solution!</h3>
+      <p style="margin: 2px 10px;">Customers with similar problems were able to solve it by following these solutions below</p>
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;">
+        <solution-view-container [solutionTitle]="topLevelSolutions[mainSolutionIndex].Title" [isRecommended]="true" [detector]="'detector'"
+        [isAnalysisView]="false" [isKeystoneDetector]="false" [askReasonNotHelpful]="true">
+        <markdown [data]="topLevelSolutions[mainSolutionIndex].DescriptionMarkdown"></markdown>
+        </solution-view-container>
+      </div>
+      <div style="width: 60%;margin: 15px 20%; min-width: 300px; background-color: white;">
+        <span>Try these other options:</span>
+        <div class="row">
+          <div *ngFor="let sol of topLevelSolutions; let i =index" class="col col-md-4 solutions-small-card-outer">
+            <div class="solutions-small-card" [ngStyle]="{'background-color': mainSolutionIndex==i? '#e8e8e8': 'white'}" (click)="selectSolution(sol, i)">
+              <span>{{sol.Title}}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--<div style="width: 50%;margin: 15px 25%;min-width: 300px;min-height: 100px;border: 1px solid gray;background-color: white; padding: 0px 10px;">
+        <h3>We found a solution for you</h3>
+        <p>Please go to Diagnose and Solve and debug using the <a href="/appDownAnalysis">Web App Down</a> detector.</p>
+      </div>-->
+    </div>
+    <div class="row" name="documentation-results">
+      <collapsible-list-fabric [collapsed]="true" [title]="'View Documentation and Guides from the Web (' + docs.length + ')'">
+        <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0"><p>Azure Guides</p></collapsible-list-item>
+        <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
+          <div class="support-doc-section">
+            <markdown *ngIf="supportDocumentContent.length>0" [data]="supportDocumentContent"></markdown>
+          </div>
+        </collapsible-list-item>
+        <collapsible-list-item body>
+          <div>
+            <i *ngIf="documentsShowLoader" class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+            <span style="margin-left:5px">Documents from the web</span>
+          </div>
+        </collapsible-list-item>
+        <collapsible-list-item body *ngFor="let doc of webDocuments;let i =index" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
+          <div class="article" (click)="selectResult(doc)" tabindex="0" (keyup.enter)="selectResult(doc)" >
+              <a style="font-weight:600;">{{doc.title}}
+              <i class="fa fa-external-link"></i>
+              </a>
+              <div class="article-link">{{doc.linkShort}}</div>
+              <div class="web-doc-text">{{doc.description}}</div>
+          </div>
+        </collapsible-list-item>
+      </collapsible-list-fabric>
+    </div>
+    <div class="row" name="detector-results">
+      <!--<collapsible-list-fabric [collapsed]="true" [title]="'Observations and solutions (' + someInsights.length + ')'">
+        <collapsible-list-item body *ngFor="let insight of someInsights;let i =index" style="display: block; width: 90%; margin: 5px 5%;">
+          <div class="insight-box">
+            <div style="display: block;">
+              <i *ngIf="insight.Status==0" class="fa fa-times-circle" style="color: red;"></i>
+              <i *ngIf="insight.Status==3" class="fa fa-check-circle" style="color: green;"></i>
+              <div class="insight-detector-name">{{insight.Name}}</div>
+            </div>
+            <div class="insight-message">{{insight.Title}}</div>
+            <div style="display: block;">
+              <fab-primary-button contentStyle="margin-top: 20px;" [styles]="solutionButtonStyle"
+                  type="Submit" text='View solutions' (click)="showSolutions(viewModel)">
+              </fab-primary-button>
+              <fab-link [href]="''" [styles]="linkStyle">View diagnostic data</fab-link>
+            </div>
+          </div>
+        </collapsible-list-item>
+      </collapsible-list-fabric>-->
+      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top:10px">
+        <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+        <span style="margin-left:5px">Observations and solutions</span>
+      </div>
+      <collapsible-list-fabric *ngIf="issueDetectedViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Observations and solutions (' + issueDetectedViewModels.length + ')'">
+        <collapsible-list-item body *ngFor="let viewModel of issueDetectedViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
+          <div class="insight-box">
+            <div style="display: block;">
+              <status-icon style="display: inline-block;" [loading]="viewModel.model.loadingStatus" [status]="viewModel.model.status"
+                [size]="16">
+              </status-icon>
+              <div class="insight-detector-name">{{viewModel.model.title}}</div>
+            </div>
+            <div class="insight-message">{{viewModel.insightTitle}}</div>
+            <div style="display: block;">
+              <fab-primary-button [styles]="solutionButtonStyle"
+                  type="Submit" text='View solutions' (click)="showSolutions(viewModel)">
+              </fab-primary-button>
+              <fab-link [href]="''" [styles]="linkStyle" (click)="viewDetectorData(viewModel)">View diagnostic data</fab-link>
+            </div>
+          </div>
+        </collapsible-list-item>
+      </collapsible-list-fabric>
+      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top:10px">
+        <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+        <span style="margin-left:5px">Successful Checks</span>
+      </div>
+      <collapsible-list-fabric *ngIf="successfulViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Successful Checks (' + successfulViewModels.length + ')'">
+        <collapsible-list-item body *ngFor="let viewModel of successfulViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
+          <div class="insight-box">
+            <div style="display: block;">
+              <status-icon style="display: inline-block;" [loading]="viewModel.model.loadingStatus" [status]="viewModel.model.status"
+                [size]="20">
+              </status-icon>
+              <div class="insight-detector-name">{{viewModel.model.title}}</div>
+            </div>
+            <div class="insight-message">{{viewModel.insightTitle}}</div>
+            <div style="display: block;">
+              <fab-link [href]="''" [styles]="successfulLinkStyle" (click)="viewDetectorData(viewModel)">View diagnostic data</fab-link>
+            </div>
+          </div>
+        </collapsible-list-item>
+      </collapsible-list-fabric>
     </div>
   </div>
-  <div class="row" name="top-solution">
-    <h3 style="font-size: 16px;font-weight: 700;margin: 2px 10px;">We think we found you a solution!</h3>
-    <p style="margin: 2px 10px;">Customers with similar problems were able to solve it by following these solutions below</p>
-    <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;">
-      <solution-view-container [solutionTitle]="solutionsArray[0].Title" [isRecommended]="true" [detector]="'detector'"
-      [isAnalysisView]="false" [isKeystoneDetector]="false">
-      <markdown [data]="solutionsArray[0].DescriptionMarkdown"></markdown>
-      </solution-view-container>
-    </div>
-    <!--<div style="width: 50%;margin: 15px 25%;min-width: 300px;min-height: 100px;border: 1px solid gray;background-color: white; padding: 0px 10px;">
-      <h3>We found a solution for you</h3>
-      <p>Please go to Diagnose and Solve and debug using the <a href="/appDownAnalysis">Web App Down</a> detector.</p>
-    </div>-->
+  <div style="display: inline-block;margin-left: 19px; margin-top: 10px;" *ngIf="isDetectorView">
+    <a tabindex="0" (keyup.enter)="goBackToOrchestrator()" aria-label="Link to go back to the solutions view" role="button"
+      (click)="goBackToOrchestrator()" >Return back to main screen</a>
   </div>
-  <div class="row" name="documentation-results">
-    <collapsible-list-fabric [collapsed]="true" [title]="'View Documentation and Guides from the Web (' + docs.length + ')'">
-      <collapsible-list-item body *ngIf="true"><p>Video Guides</p></collapsible-list-item>
-      <collapsible-list-item body *ngIf="true" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
-        <div class="support-doc-section">
-          <h3>WATCH THIS VIDEO</h3>
-        </div>
-      </collapsible-list-item>
-      <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0"><p>Azure Guides</p></collapsible-list-item>
-      <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
-        <div class="support-doc-section">
-          <markdown *ngIf="supportDocumentContent.length>0" [data]="supportDocumentContent"></markdown>
-        </div>
-      </collapsible-list-item>
-      <collapsible-list-item body>
-        <div>
-          <i *ngIf="documentsShowLoader" class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-          <span style="margin-left:5px">Documents from the web</span>
-        </div>
-      </collapsible-list-item>
-      <collapsible-list-item body *ngFor="let doc of webDocuments;let i =index" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
-        <div class="article" (click)="selectResult(doc)" tabindex="0" (keyup.enter)="selectResult(doc)" >
-            <a style="font-weight:600;">{{doc.title}}
-            <i class="fa fa-external-link"></i>
-            </a>
-            <div class="web-doc-text">{{doc.description}}</div>
-        </div>
-      </collapsible-list-item>
-    </collapsible-list-fabric>
-  </div>
-  <div class="row" name="detector-results">
-    <!--<collapsible-list-fabric [collapsed]="true" [title]="'Observations and solutions (' + someInsights.length + ')'">
-      <collapsible-list-item body *ngFor="let insight of someInsights;let i =index" style="display: block; width: 90%; margin: 5px 5%;">
-        <div class="insight-box">
-          <div style="display: block;">
-            <i *ngIf="insight.Status==0" class="fa fa-times-circle" style="color: red;"></i>
-            <i *ngIf="insight.Status==3" class="fa fa-check-circle" style="color: green;"></i>
-            <div class="insight-detector-name">{{insight.Name}}</div>
-          </div>
-          <div class="insight-message">{{insight.Title}}</div>
-          <div style="display: block;">
-            <fab-primary-button contentStyle="margin-top: 20px;" [styles]="solutionButtonStyle"
-                type="Submit" text='View solutions' (click)="showSolutions()">
-            </fab-primary-button>
-            <fab-link [href]="''" [styles]="linkStyle">View diagnostic data</fab-link>
-          </div>
-        </div>
-      </collapsible-list-item>
-    </collapsible-list-fabric>-->
-    <div *ngIf="getPendingDetectorCount() > 0" style="margin-top:10px">
-      <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-      <span style="margin-left:5px">Observations and solutions</span>
-    </div>
-    <collapsible-list-fabric *ngIf="issueDetectedViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Observations and solutions (' + issueDetectedViewModels.length + ')'">
-      <collapsible-list-item body *ngFor="let viewModel of issueDetectedViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
-        <div class="insight-box">
-          <div style="display: block;">
-            <status-icon style="display: inline-block;" [loading]="viewModel.model.loadingStatus" [status]="viewModel.model.status"
-              [size]="20">
-            </status-icon>
-            <div class="insight-detector-name">{{viewModel.model.title}}</div>
-          </div>
-          <div class="insight-message">{{viewModel.insightTitle}}</div>
-          <div style="display: block;">
-            <fab-primary-button [styles]="solutionButtonStyle"
-                type="Submit" text='View solutions' (click)="showSolutions()">
-            </fab-primary-button>
-            <fab-link [href]="''" [styles]="linkStyle">View diagnostic data</fab-link>
-          </div>
-        </div>
-      </collapsible-list-item>
-    </collapsible-list-fabric>
-    <div *ngIf="getPendingDetectorCount() > 0" style="margin-top:10px">
-      <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-      <span style="margin-left:5px">Successful Checks</span>
-    </div>
-    <collapsible-list-fabric *ngIf="successfulViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Successful Checks (' + successfulViewModels.length + ')'">
-      <collapsible-list-item body *ngFor="let viewModel of successfulViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
-        <div class="insight-box">
-          <div style="display: block;">
-            <status-icon style="display: inline-block;" [loading]="viewModel.model.loadingStatus" [status]="viewModel.model.status"
-              [size]="20">
-            </status-icon>
-            <div class="insight-detector-name">{{viewModel.model.title}}</div>
-          </div>
-          <div class="insight-message">{{viewModel.insightTitle}}</div>
-          <div style="display: block;">
-            <fab-link [href]="''" [styles]="successfulLinkStyle">View diagnostic data</fab-link>
-          </div>
-        </div>
-      </collapsible-list-item>
-    </collapsible-list-fabric>
+  <div *ngIf="isDetectorView">
+    <router-outlet></router-outlet>
   </div>
 </div>
