--- a/AngularApp/projects/diagnostic-data/src/lib/components/step-views/check-step-view/check.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/step-views/check-step-view/check.component.html
@@ -3,8 +3,7 @@
       <status-icon [loading]="1" [status]="check.level | convertLevelToHealthStatus"></status-icon>
   </div>
   <div class="check-content">
-    <div class="check-title {{bold ? 'bold':''}}" [innerHtml]="check.title">
-      <a tabindex="0" (click)="toggleSubChecks()"> <i class="{{expanded ? 'ib-dchevup' : 'ib-dchevdown'}}"></i> </a>
+    <div class="check-title {{bold ? 'bold':''}}" [innerHtml]="check.title"> <!-- Angular strips risky html contents like <script> out, see https://angular.io/guide/security#preventing-cross-site-scripting-xss-->
     </div>
     <span class="expand-icon" *ngIf="check.subChecks?.length>0; else elseBlock"> <a tabindex="0" (click)="toggleSubChecks()"> <i class="ms-Icon ms-Icon--{{expanded ? 'ChevronUpMed' : 'ChevronDownMed'}} "></i> </a></span>
     <ng-template #elseBlock>
