Most changes done

--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution-orchestrator/solution-orchestrator.component.html
@@ -1,5 +1,5 @@
 <div class="col-md col-ms col-lg" style="padding: 5px 25px;width: 100%;min-height: 70vh;display: inline-block;">
-  <fab-panel [isOpen]="isPanelOpen" (onDismiss)="closePanel()" [type]="panelType" [headerText]="panelHeaderText">
+  <fab-panel [isOpen]="isPanelOpen" (onDismiss)="closePanel()" [type]="panelType" [headerText]="panelHeaderText" [closeButtonAriaLabel]="'Close'">
     <div style="padding: 10px">
       <solution-view-container *ngFor="let sol of panelSolutions" [solutionTitle]="sol.Title" [detector]="'solutionorchestrator'"
         [isAnalysisView]="false" [isKeystoneDetector]="false" [showFeedbackQuestion]="false">
@@ -10,7 +10,7 @@
   <div class="row" name="header">
     <fab-command-bar [attr.id]="'fab-command-bar-sol-orch'"  contentStyle="border-bottom:1px solid gray;font-weight:12px" contentClass="fab-command-bar-class" >
       <items>
-        <fab-command-bar-item *ngIf="isDetectorView" key="custom1" text="custom text">
+        <fab-command-bar-item *ngIf="inDrillDownMode" key="custom1" text="custom text">
           <render>
             <ng-template let-item="item"><fab-breadcrumb [items]="breadcrumbItems" [styles]="breadCrumbStyle"></fab-breadcrumb></ng-template>
           </render>
@@ -27,13 +27,13 @@
       </far-items>
     </fab-command-bar>
   </div>
-  <!--<div class="row" name="header1" *ngIf="isDetectorView">
+  <!--<div class="row" name="header1" *ngIf="inDrillDownMode">
     <fab-breadcrumb [items]="breadcrumbItems"></fab-breadcrumb>
   </div>-->
-  <div class="row" *ngIf="!isDetectorView">
+  <div class="row" *ngIf="!inDrillDownMode">
     <div class="row" name="search-bar" style="margin: 20px auto;">
       <div style="margin: auto 25%;">
-        <div class="row" style="font-size: 18px; font-weight: 700; padding: 12px;">Displaying Diagnostics based on ...</div>
+        <div class="row" style="font-size: 18px; font-weight: 700; padding: 12px;text-align: center;">Displaying Recommendations For ...</div>
         <fab-search-box id="solOrchSearchBox" type="search" [placeholder]="'Briefly describe the issue'" [value]="searchTermDisplayed"
           [ariaLabel]="inputAriaLabel" (onChange)="updateSearchTerm($event)" (onSearch)="onSearchEnter($event)" (onFocus)="onSearchBoxFocus()" (onClear)="clearSearchTerm()">
         </fab-search-box>
@@ -42,20 +42,31 @@
     <div class="row" name="top-solution">
       <h3 style="font-size: 16px;font-weight: 700;margin: 2px 10px;">We think we found you a solution!</h3>
       <p style="margin: 2px 10px;">Customers with similar problems were able to solve it by following these solutions below</p>
-      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;">
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="topLevelSolutions && topLevelSolutions.length>0">
         <solution-view-container [solutionTitle]="topLevelSolutions[mainSolutionIndex].Title" [isRecommended]="true" [detector]="'detector'"
         [isAnalysisView]="false" [isKeystoneDetector]="false" [askReasonNotHelpful]="true">
         <markdown [data]="topLevelSolutions[mainSolutionIndex].DescriptionMarkdown"></markdown>
         </solution-view-container>
-      </div>
-      <div style="width: 60%;margin: 15px 20%; min-width: 300px; background-color: white;">
-        <span>Try these other options:</span>
-        <div class="row">
-          <div *ngFor="let sol of topLevelSolutions; let i =index" class="col col-md-4 solutions-small-card-outer">
-            <div class="solutions-small-card" [ngStyle]="{'background-color': mainSolutionIndex==i? '#e8e8e8': 'white'}" (click)="selectSolution(sol, i)">
-              <span>{{sol.Title}}</span>
+        <div style="display: block;">
+          <fab-link [href]="''" [styles]="successfulLinkStyle" (click)="viewSolutionSupportingData(topLevelSolutions[mainSolutionIndex])">View supporting data</fab-link>
+        </div>
+        <div style="margin: 15px 0; min-width: 300px;" *ngIf="topLevelSolutions && topLevelSolutions.length>1">
+          <span>Try these other options:</span>
+          <div class="row">
+            <div *ngFor="let sol of topLevelSolutions; let i =index" class="col col-md-4 solutions-small-card-outer">
+              <div class="solutions-small-card" [ngStyle]="{'background-color': mainSolutionIndex==i? '#e8e8e8': 'white'}" (click)="selectSolution(sol, i)">
+                <span>{{sol.Title}}</span>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="fetchingDetectors || getPendingDetectorCount() > 0">
+        <loader-detector-view></loader-detector-view>
+      </div>
+      <div style="width: 60%;margin: 15px 20%;min-width: 300px;background-color: white;" *ngIf="!fetchingDetectors && getPendingDetectorCount() === 0 && (!topLevelSolutions || topLevelSolutions.length==0)">
+        <div class="support-doc-section">
+          <markdown *ngIf="supportDocumentContent.length>0" [data]="supportDocumentContent"></markdown>
         </div>
       </div>
       <!--<div style="width: 50%;margin: 15px 25%;min-width: 300px;min-height: 100px;border: 1px solid gray;background-color: white; padding: 0px 10px;">
@@ -64,8 +75,8 @@
       </div>-->
     </div>
     <div class="row" name="documentation-results">
-      <collapsible-list-fabric [collapsed]="true" [title]="'View Documentation and Guides from the Web (' + docs.length + ')'">
-        <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0"><p>Azure Guides</p></collapsible-list-item>
+      <collapsible-list-fabric [collapsed]="true" [title]="'View Documentation and Guides from the Web (' + 2 + ')'">
+        <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0"><p style="font-weight: 500;">Azure Guides</p></collapsible-list-item>
         <collapsible-list-item body *ngIf="supportDocumentContent && supportDocumentContent.length>0" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
           <div class="support-doc-section">
             <markdown *ngIf="supportDocumentContent.length>0" [data]="supportDocumentContent"></markdown>
@@ -74,7 +85,7 @@
         <collapsible-list-item body>
           <div>
             <i *ngIf="documentsShowLoader" class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-            <span style="margin-left:5px">Documents from the web</span>
+            <span style="margin-left:5px;font-weight:500;">Documents from the web</span>
           </div>
         </collapsible-list-item>
         <collapsible-list-item body *ngFor="let doc of webDocuments;let i =index" style="display:inline-block; width: 90%; margin: 5px 2.5%;">
@@ -89,27 +100,12 @@
       </collapsible-list-fabric>
     </div>
     <div class="row" name="detector-results">
-      <!--<collapsible-list-fabric [collapsed]="true" [title]="'Observations and solutions (' + someInsights.length + ')'">
-        <collapsible-list-item body *ngFor="let insight of someInsights;let i =index" style="display: block; width: 90%; margin: 5px 5%;">
-          <div class="insight-box">
-            <div style="display: block;">
-              <i *ngIf="insight.Status==0" class="fa fa-times-circle" style="color: red;"></i>
-              <i *ngIf="insight.Status==3" class="fa fa-check-circle" style="color: green;"></i>
-              <div class="insight-detector-name">{{insight.Name}}</div>
-            </div>
-            <div class="insight-message">{{insight.Title}}</div>
-            <div style="display: block;">
-              <fab-primary-button contentStyle="margin-top: 20px;" [styles]="solutionButtonStyle"
-                  type="Submit" text='View solutions' (click)="showSolutions(viewModel)">
-              </fab-primary-button>
-              <fab-link [href]="''" [styles]="linkStyle">View diagnostic data</fab-link>
-            </div>
-          </div>
-        </collapsible-list-item>
-      </collapsible-list-fabric>-->
-      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top:10px">
-        <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-        <span style="margin-left:5px">Observations and solutions</span>
+      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top: 24px;padding: 0px 10px;border-bottom: 1px solid #ccc;">
+        <div style="display: inline;" class="row">
+          <i class="fa fa-circle-o-notch fa-spin spin-icon" style="display:inline;float:left; vertical-align:text-bottom;" aria-hidden="true"></i>
+          <div class="sections-loading-title col-md-5" style="display: inline;">Observations and solutions</div>
+          <div class="sections-loading-title col-md-3" style="display: inline;">Running checks {{detectors.length-getPendingDetectorCount()}}/{{detectors.length}}</div>
+        </div>
       </div>
       <collapsible-list-fabric *ngIf="issueDetectedViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Observations and solutions (' + issueDetectedViewModels.length + ')'">
         <collapsible-list-item body *ngFor="let viewModel of issueDetectedViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
@@ -122,17 +118,20 @@
             </div>
             <div class="insight-message">{{viewModel.insightTitle}}</div>
             <div style="display: block;">
-              <fab-primary-button [styles]="solutionButtonStyle"
+              <fab-primary-button [styles]="solutionButtonStyle" *ngIf="viewModel.solutions && viewModel.solutions.length>0"
                   type="Submit" text='View solutions' (click)="showSolutions(viewModel)">
               </fab-primary-button>
-              <fab-link [href]="''" [styles]="linkStyle" (click)="viewDetectorData(viewModel)">View diagnostic data</fab-link>
+              <fab-link [href]="''" [styles]="viewModel.solutions && viewModel.solutions.length>0? linkStyle: successfulLinkStyle" (click)="viewDetectorData(viewModel, 'Observations and solutions')">View diagnostic data</fab-link>
             </div>
           </div>
         </collapsible-list-item>
       </collapsible-list-fabric>
-      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top:10px">
-        <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-        <span style="margin-left:5px">Successful Checks</span>
+      <div *ngIf="getPendingDetectorCount() > 0" style="margin-top: 24px;padding: 0px 10px;border-bottom: 1px solid #ccc;">
+        <div style="display: inline;" class="row">
+          <i class="fa fa-circle-o-notch fa-spin spin-icon" style="display:inline;float:left; vertical-align:text-bottom;" aria-hidden="true"></i>
+          <div class="sections-loading-title col-md-5" style="display: inline;">Successful checks</div>
+          <div class="sections-loading-title col-md-3" style="display: inline;">Running checks {{detectors.length-getPendingDetectorCount()}}/{{detectors.length}}</div>
+        </div>
       </div>
       <collapsible-list-fabric *ngIf="successfulViewModels.length>0 && getPendingDetectorCount() === 0" [collapsed]="true" [title]="'Successful Checks (' + successfulViewModels.length + ')'">
         <collapsible-list-item body *ngFor="let viewModel of successfulViewModels;let i =index" style="display: block; width: 90%; margin: 5px 2.5%;">
@@ -145,18 +144,18 @@
             </div>
             <div class="insight-message">{{viewModel.insightTitle}}</div>
             <div style="display: block;">
-              <fab-link [href]="''" [styles]="successfulLinkStyle" (click)="viewDetectorData(viewModel)">View diagnostic data</fab-link>
+              <fab-link [href]="''" [styles]="successfulLinkStyle" (click)="viewDetectorData(viewModel, 'Successful checks')">View diagnostic data</fab-link>
             </div>
           </div>
         </collapsible-list-item>
       </collapsible-list-fabric>
     </div>
   </div>
-  <div style="display: inline-block;margin-left: 19px; margin-top: 10px;" *ngIf="isDetectorView">
+  <div style="display: inline-block;margin-left: 19px; margin-top: 10px;" *ngIf="inDrillDownMode">
     <a tabindex="0" (keyup.enter)="goBackToOrchestrator()" aria-label="Link to go back to the solutions view" role="button"
       (click)="goBackToOrchestrator()" >Return back to main screen</a>
   </div>
-  <div *ngIf="isDetectorView">
+  <div *ngIf="inDrillDownMode">
     <router-outlet></router-outlet>
   </div>
 </div>
